third_party/move/move-compiler-v2/tests/reference-safety/freeze.old.exp

Diagnostics:
error: same mutable reference in local `r` is also used in other value in argument list
   ┌─ tests/reference-safety/freeze.move:18:9
   │
17 │         let r = &mut x;
   │                 ------ previous mutable local borrow
18 │         ref_mut_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^ requirement enforced here

error: mutable reference in local `r` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/freeze.move:24:9
   │
24 │         ref_imm_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^
   │         │           │
   │         │           previous freeze
   │         requirement enforced here
